changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Some plugin-related fixes.
 server/c_object.c: EVENT_DROP should be called before the item is removed,
  else can't prevent dropping.
 server/monster.c: enable items in player/npc's inventory to react, too
Nicolas Weeger 2008-08-16

Added new subtype 4 ST_MAT_WINDOW for building materials.  This allows the
player to build windows in existing walls (if these walls have a corresponding
window archetype).  Fixed an issue in apply_builder_floor() that could cause a
floor to be removed twice when a wall was replaced by a floor.
 include/define.h
 server/build_map.c
Raphaël Quinet 2008-08-04

Bug fix: when building a new floor on top of an old floor, the old one was
never removed, resulting in a stack of floors in some buildable areas.
 server/build_map.c
Raphaël Quinet 2008-08-03

Fix for bug #2028541: Any object using a non-default move_slow_penalty was
always saved with the value 0 because the code was using FAST_SAVE_LONG
instead of FAST_SAVE_DOUBLE for a floating-point value.
 common/loader.l
Raphaël Quinet 2008-08-02

Change regions file name to 'regions.reg'.
 include/config.h
Nicolas Weeger 2008-08-02

If an object of type CHECK_INV blocks movement (e.g. move_block all) and if
it contains a message, then display that message to those who are blocked.
This allows the inventory checkers to behave a bit like locked doors.
 common/map.c
Raphaël Quinet 2008-07-31

Allow other archetypes than fingers to be given as trophies in arena battles.
In order to do that, the battleground should have other_arch set to the